--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -2318,33 +2318,6 @@ Download the Roamni app today to make a tour or take a tour.</string>
             </objects>
             <point key="canvasLocation" x="3589.5999999999999" y="-1619.6401799100452"/>
         </scene>
-        <!--Container Instruction View Controller-->
-        <scene sceneID="szA-52-BoP">
-            <objects>
-                <viewController id="ezs-KK-tbV" customClass="ContainerInstructionViewController" customModule="Roamni" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="n31-Vy-U0c"/>
-                        <viewControllerLayoutGuide type="bottom" id="ecw-9y-4Jn"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="o0f-Bc-IhI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="There is no such type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Zp-zz-y4P">
-                                <rect key="frame" x="34" y="253" width="307" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8pZ-Mr-DZs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2084" y="-26.53673163418291"/>
-        </scene>
         <!--Container Map View Controller-->
         <scene sceneID="MHu-LW-KUb">
             <objects>
@@ -2482,6 +2455,9 @@ Download the Roamni app today to make a tour or take a tour.</string>
                     </tableView>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="559"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Tbv-8H-g5L">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4S-AZ-SFa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2524,7 +2500,6 @@ Download the Roamni app today to make a tour or take a tour.</string>
                     <connections>
                         <segue destination="ouv-B4-X2U" kind="custom" identifier="second" customClass="EmptySegue" customModule="Roamni" customModuleProvider="target" id="Dak-K9-c9f"/>
                         <segue destination="jXe-iy-nSM" kind="custom" identifier="first" customClass="EmptySegue" customModule="Roamni" customModuleProvider="target" id="1wP-N2-pck"/>
-                        <segue destination="ezs-KK-tbV" kind="custom" identifier="third" customClass="EmptySegue" customModule="Roamni" customModuleProvider="target" id="DUV-Yh-ulR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5h-xu-T3T" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3556,7 +3531,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
         <image name="upload" width="128" height="128"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YxH-q0-g5X"/>
+        <segue reference="YIB-t0-b6L"/>
         <segue reference="aGK-Qo-5oV"/>
         <segue reference="xMV-R0-9wp"/>
         <segue reference="s2S-wb-XYy"/>
